// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`sc-upsell renders 1`] = `
<sc-upsell>
  <mock:shadow-root>
    <slot></slot>
    <sc-dialog noheader="" style="--body-spacing: var(--sc-spacing-xxx-large);">
      <div class="confirm__icon">
        <div class="confirm__icon-container">
          <sc-icon name="check"></sc-icon>
        </div>
      </div>
      <sc-dashboard-module heading="Thank you!" style="--sc-dashboard-module-spacing: var(--sc-spacing-x-large); text-align: center;">
        <span slot="description">
          Your purchase was successful. A receipt is on its way to your inbox.
        </span>
        <sc-button autofocus="" size="large" type="primary">
          Continue
          <sc-icon name="arrow-right" slot="suffix"></sc-icon>
        </sc-button>
      </sc-dashboard-module>
    </sc-dialog>
  </mock:shadow-root>
</sc-upsell>
`;

exports[`sc-upsell renders with manual payment method 1`] = `
<sc-upsell>
  <mock:shadow-root>
    <slot></slot>
    <sc-dialog noheader="" style="--body-spacing: var(--sc-spacing-xxx-large);">
      <div class="confirm__icon">
        <div class="confirm__icon-container">
          <sc-icon name="check"></sc-icon>
        </div>
      </div>
      <sc-dashboard-module heading="Thank you!" style="--sc-dashboard-module-spacing: var(--sc-spacing-x-large); text-align: center;">
        <span slot="description">
          Your purchase was successful. A receipt is on its way to your inbox.
        </span>
        <sc-alert open="" type="info" style="text-align: left;">
          <span slot="title">
            Manual Payment Method
          </span>
          <p>
            Manual Payment Method Instructions
          </p>
        </sc-alert>
        <sc-button autofocus="" size="large" type="primary">
          Continue
          <sc-icon name="arrow-right" slot="suffix"></sc-icon>
        </sc-button>
      </sc-dashboard-module>
    </sc-dialog>
  </mock:shadow-root>
</sc-upsell>
`;
